# yewdux

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  context.html  default.nix  default_store.html  derived_state.html  dispatch.html  example.html  flake.nix  index.html  intro.html  listeners.html  persistence.html  print.html  reading.html  searchindex.js  searchindex.json  setup.html  shell.nix  ssr.html  store.html
.github/workflows/: deploy.yml  release.yml
crates/anyflux/: Cargo.toml  README.md
crates/anyflux/src/: context.rs  dispatch.rs  lib.rs  listener.rs  mrc.rs  store.rs  subscriber.rs
crates/yewdux/: Cargo.toml
crates/yewdux-functional/src/: lib.rs
crates/yewdux-idb/: Cargo.toml
crates/yewdux-idb/src/: lib.rs
crates/yewdux-input/: Cargo.toml
crates/yewdux-input/src/: lib.rs
crates/yewdux-macros/: Cargo.toml
crates/yewdux-macros/src/: lib.rs  store.rs
crates/yewdux-utils/: Cargo.toml
crates/yewdux-utils/src/: lib.rs
crates/yewdux/src/: anymap.rs  component.rs  context.rs  context_provider.rs  derived_from.rs  dispatch.rs  functional.rs  lib.rs  listener.rs  mrc.rs  storage.rs  store.rs  subscriber.rs  util.rs
docs/: book.toml
docs/src/: SUMMARY.md  context.md  default_store.md  derived_state.md  dispatch.md  example.md  future.md  intro.md  listeners.md  mutation.md  persistence.md  predictable_mutation.md  reading.md  selectors.md  setup.md  ssr.md  store.md  succinct_mutation.md  tips.md
examples/async_proxy/: Cargo.toml  index.html
examples/async_proxy/src/: main.rs  proxy.rs
examples/async_reducer/: Cargo.toml
examples/async_reducer/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: app.rs  display.rs  input.rs  main.rs
examples/bridge/: Cargo.toml
examples/bridge/src/: main.rs
examples/context_root/: Cargo.toml
examples/context_root/src/: main.rs
examples/custom_props/: Cargo.toml
examples/custom_props/src/: main.rs
examples/derived_from/: Cargo.toml
examples/derived_from/src/: main.rs
examples/dynamic-render/: Cargo.toml
examples/dynamic-render/src/: main.rs
examples/functional/: Cargo.toml
examples/functional/src/: main.rs
examples/future/: Cargo.toml
examples/future/src/: main.rs
examples/handler_bridge/: Cargo.toml
examples/handler_bridge/src/: main.rs
examples/handlers/: Cargo.toml
examples/handlers/src/: main.rs
examples/history/: Cargo.toml
examples/history/src/: main.rs
examples/idb-agent/: Cargo.toml  index.html
examples/idb-agent/src/: lib.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/listener/: Cargo.toml
examples/listener/src/: main.rs
examples/manual/: Cargo.toml
examples/manual/src/: main.rs
examples/message/: Cargo.toml
examples/message/src/: main.rs
examples/multi_component/: Cargo.toml
examples/multi_component/src/: main.rs
examples/no_copy/: Cargo.toml
examples/no_copy/src/: main.rs
examples/persistent/: Cargo.toml
examples/persistent/src/: main.rs
examples/props/: Cargo.toml
examples/props/src/: main.rs
examples/reducer/: Cargo.toml
examples/reducer/src/: main.rs
examples/reducer_based_interaction/: Cargo.toml
examples/reducer_based_interaction/src/: components.rs  main.rs  state.rs
examples/selector/: Cargo.toml
examples/selector/src/: main.rs
examples/service_bridge/: Cargo.toml
examples/service_bridge/src/: main.rs
examples/store/: Cargo.toml
examples/store/src/: main.rs
examples/tab_sync/: Cargo.toml
examples/tab_sync/src/: main.rs
examples/todomvc/: Cargo.toml  index.html
examples/todomvc/src/: main.rs  state.rs
src/: component.rs  dispatch.rs  dispatcher.rs  handle.rs  handler.rs  lib.rs  reducer_handler.rs  service.rs  store.rs
src/component/: shared.rs  view.rs  wrapper.rs
src/store/: basic.rs  default.rs  persistent.rs  reducer.rs  storage.rs
yewdux/: Cargo.toml
yewdux-functional/: Cargo.toml
yewdux-functional/src/: lib.rs
yewdux-input/: Cargo.toml
yewdux-input/src/: functional.rs  lib.rs
yewdux/src/: component.rs  context.rs  dispatch.rs  lib.rs  service.rs  store.rs  util.rs
yewdux/src/component/: wrapper.rs
yewdux/src/store/: link.rs  persistent.rs  reducer.rs
