[package]
name = "yew-state"
version = "0.5.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/intendednull/yew-state"
readme = "README.md"
description = "Ergonomic shared state for Yew (comparable to context hooks in React)"
keywords = ["yew", "state", "session", "storage", "shared"]
categories = ["wasm", "web-programming", "rust-patterns"]


[features]
default = []
future = ["yewtil"]

[dependencies]
serde = { version = "1.0.114", features = ["rc"] }
yew = "^0.17"
yewtil = { version = "0.3.2", optional = true }

