[package]
authors = [
    "Luke Chu <37006668+lukechu10@users.noreply.github.com>", 
    "Noah Corona <noah@coronasoftware.net"
    ]
edition = "2018"
name = "yewdux-functional"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev="8a16d4fc3d9b96a3aab7c98b3ab61b55deac9d3c" }
yewdux = {path = "../yewdux", version = "0.6"}
