[package]
authors = [
    "Luke Chu <37006668+lukechu10@users.noreply.github.com>", 
    "Noah Corona <noah@coronasoftware.net"
    ]
repository = "https://github.com/yewdux/yewdux"
license = "MIT"
edition = "2018"
name = "yewdux-functional"
version = "0.1.0"
readme = "../README.md"
description = "Functional interface for Yewdux"
keywords = ["yew", "state", "redux", "shared", "container"]
categories = ["wasm", "web-programming", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yewdux = "0.7"
