[package]
name = "yewdux"
version = "0.7.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yewdux/yewdux"
readme = "../README.md"
description = "Ergonomic state management for Yew applications"
keywords = ["yew", "state", "redux", "shared", "container"]
categories = ["wasm", "web-programming", "rust-patterns"]


[dependencies]
serde = { version = "1.0.114", features = ["rc"] }
serde_json = "1.0.64"
web-sys = "0.3.51"
yew = "0.19"
yew-agent = "0.1"

