[package]
name = "yewdux-input"
version = "0.1.0"
edition = "2021"
authors = ["Noah <noah@coronasoftware.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yewdux/yewdux"
readme = "../../README.md"
description = "Input layer for Yewdux"
keywords = ["yew", "state", "redux", "shared", "container"]
categories = ["wasm", "web-programming", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yewdux = "0.9"
web-sys = "0.3"
wasm-bindgen = "0.2"
yew = "0.20"
chrono = "0.4.22"
