[package]
name = "yewdux-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yewdux = { path = "../yewdux" }
web-sys = "0.3"
wasm-bindgen = "0.2"
yew = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = ["rc"] }
