[package]
name = "yewdux"
version = "0.10.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yewdux/yewdux"
readme = "../../README.md"
description = "Ergonomic state management for Yew applications"
keywords = ["yew", "state", "redux", "shared", "container"]
categories = ["wasm", "web-programming", "rust-patterns"]

[features]
default = ["future"]
future = []

# INTERNAL USE ONLY
doctests = []

[dependencies]
log = "0.4.16"
serde = { version = "1.0.114", features = ["rc"] }
serde_json = "1.0.64"
slab = "0.4"
thiserror = "1.0"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew.git" }
yewdux-macros = { path = "../yewdux-macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"


