[package]
name = "async_proxy"
version = "0.1.0"
authors = ["Alister Lee <alilee@dev.shortepic.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
serde = "1.0.140"
serde_json = "1.0.82"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.59"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
