[package]
name = "async_proxy"
version = "0.1.0"
authors = ["Alister Lee <alilee@dev.shortepic.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.30"
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
reqwasm = "0.5.0"
serde = "1.0.140"
serde_json = "1.0.82"
web-sys = "0.3.59"
