[package]
name = "state-managed"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["rc"] }
yew-state = { path = "../.." }
yewtil = "0.3.0"
wasm-bindgen = "0.2.64"
yew = "0.17.2"
