[package]
name = "derived_from"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
