[package]
name = "future"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.30"
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
serde = "1.0"
gloo-net = "0.4"
web-sys = "0.3"
