[package]
name = "handler_bridge"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-state = { path = "../.." }
yew = { git = "https://github.com/yewstack/yew.git" }
yewtil = {  git = "https://github.com/yewstack/yew.git" }
