[package]
name = "idb-agent"
version = "0.1.0"
authors = ["Tiemen Schuijbroek <t.j.l.schuijbroek@ratio-case.nl>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193" }
yew = { version="0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
yewdux = { path = "../../crates/yewdux" }
yewdux-idb = { path = "../../crates/yewdux-idb" }
wasm-logger = "0.2.0"
yew-hooks = "0.3.0"
