[package]
name = "listener"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114" }
wasm-logger = "0.2.0"
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
