[package]
name = "multi_component"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["rc"] }
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
