[package]
name = "reducer"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>", "Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
yewdux = { path = "../../yewdux" }
yewtil = { git = "https://github.com/yewstack/yew.git" }
