[package]
name = "reducer_based_interaction"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
yew-state = { path = "../.." }
yewtil = { git = "https://github.com/yewstack/yew.git" }
