[package]
name = "todomvc"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }
serde = "1"
strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
