[package]
name = "todomvc"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
strum = "0.25"
strum_macros = "0.25"
yew = { version = "0.22", features = ["csr"] }
yewdux = { path = "../../crates/yewdux" }

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]
